# get-wow-data

./: .gitignore  .readthedocs.yaml  README.md  example.py  getResponse.py  requirements.txt  setup.cfg  test_get.py
docs/: requirements.txt
docs/source/: conf.py  index.md
src/getwowdata/: __init__.py  getdata.py  helpers.py  urls.py
tests/: test_getdata.py
