[metadata]
name = getwowdata
version = 0.0.1
description = Provides functions that make requests to specific World of Warcraft API's
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JackBorah/getwowdata
project_urls = 
    Bug Tracker = https://github.com/JackBorah/getwowdata/issues
author = Jack Borah
author_email = borahjack@gmail.com
license = MIT
license_files = file: LICENSE
platform = any
keywords = World of Warcraft
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules



[options]
package_dir=
    =src
packages = find:
install_requires =
    requests

[options.packages.find]
where=src